Notes (or Comments, that's also accurate)
Added the ability to store some quick notes for each record, in case there's something about a record that needs a bit of explanation. These notes appear on the tooltips in the chart.

--- a/Front-end/EditRecord.html
+++ b/Front-end/EditRecord.html
@@ -146,6 +146,10 @@
 						<span class="errorText" ng-show="form.mistakes.$touched && form.mistakes.$invalid">Mistake count must be between 0 and 1000.</span>
 					</div>
 				</div>
+				<br><br>
+
+				<label for="notes" id="notes">Notes</label>
+					<textarea white rows="3" name="notes" id="notes" ng-model="record.notes"></textarea>
 				<br><br><br>
 
 				<!--Submits form data-->
