--- a/Front-end/RecordList.html
+++ b/Front-end/RecordList.html
@@ -80,14 +80,13 @@
 				<!--Primary information for a student in the list, done in columns-->
 				<div class="columnContainer" id="tableContainer" ng-hide="record.bookTitle=='Loading'" ng-click="manageExpansion(record.recordId)">
 					<div class="column" style="width:30%">{{record.name}}&nbsp;</div>
-					<div class="column" style="width:40%">{{record.bookTitle}}&nbsp;</div>
+					<div class="column" style="width:40%">{{record.displayTitle}}&nbsp;</div>
 					<div class="column" style="width:30%">{{record.startDateDisplay}}&nbsp;</div>
 				</div>
 				<!--Additional information and buttons hidden in an accordion-->
 				<div id="expandableContainer" ng-class="{'collapsedContent':record.recordId!=expandedRecordId, 'expandedContent':record.recordId==expandedRecordId}">
 					<div class="columnContainer">
 						<div class="column" style="width:50%">
-							ID: {{record.recordId}}<br>
 							Category: {{record.category}}<br>
 							Subcategory: {{record.subcategory}}<br>
 							Rep: {{record.rep}}<br><br>
