Student List Sorting Modes
Click any header and it will sort first ascending and then descending by that column. Null checks were relatively annoying but I figured out some magic for it.

--- a/Front-end/StudentList.html
+++ b/Front-end/StudentList.html
@@ -61,9 +61,9 @@
 			<!--Header of table-->
 			<div id="tableContent">
 				<div class="columnContainer" id="tableHeaderContainer">
-					<div class="column" style="width:30%">Name</div>
-					<div class="column" style="width:57.5%">Email</div>
-					<div class="column" style="width:12.5%">Grade</div>
+					<div class="column" ng-click="getSortBy('name')" style="width:30%">Name</div>
+					<div class="column" ng-click="getSortBy('email')" style="width:57.5%">Email</div>
+					<div class="column" ng-click="getSortBy('grade')" style="width:12.5%">Grade</div>
 				</div>
 			</div>
 			<!--Main content of table-->
