--- a/Front-end/RecordList.html
+++ b/Front-end/RecordList.html
@@ -6,12 +6,12 @@
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
 
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.js"></script>
-  		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
-  		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
-  		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
-  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-animate.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-animate.min.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-aria.min.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-messages.min.js"></script>
+  		<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
   		<script src="gideonApp.js"></script>
   		<script src="recordListCtrl.js"></script>
 		<script src="ripple.js"></script>
@@ -24,6 +24,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
 		<link rel="stylesheet" type="text/css" href="SiteStyle.css">
 		<link rel="stylesheet" type="text/css" href="ListStyle.css">
 	</head>
@@ -31,8 +32,8 @@
 		<div ng-app="gideonApp" ng-controller="recordListCtrl">
 		<!--Selection buttons in the header to move to insert and update pages-->
 			<div id="header">
-				<button type="button" class="hoverable" id="listBtn"   onclick="location.href='StudentList.html'">Student List</button>
-				<button type="button" class="hoverable" id="insertBtn" ng-click="insertRecordButton()">Insert Record</button>
+				<md-button class="md-accent md-raised" id="listBtn" onclick="location.href='StudentList.html'">Student List</md-button>
+				<md-button class="md-accent md-raised" id="insertBtn" ng-click="insertRecordButton()">Insert Record</md-button>
 			</div>
 			<br/>
 
@@ -41,24 +42,32 @@
 
 			<!--Filter select blocks-->
 			<div class="columnContainer" id="filterContainer">
-				<div class="column" style="width:100%">
-					<label id="filterText">Student</label>
-					<select black big ng-model="studentFilter" ng-options="s.id as s.name for s in students" ng-change="didSelectStudent()"></select>
-				</div>
+				<md-input-container class="column" style="width:100%">
+					<label>Student</label>
+					<md-select ng-model="studentFilter" ng-change="didSelectStudent()">
+						<md-option ng-repeat="s in students" value="{{s.id}}">{{s.name}}</md-option>
+					</md-select>
+				</md-input-container>
 			</div><br>
 			<div class="columnContainer" id="filterContainer">
-				<div class="column" style="width:33%">
-					<label id="filterText">Category</label>
-					<select black big ng-model="categoryFilter.value" ng-options="c for c in categories" ng-change="didFilter()"></select>
-				</div>
-				<div class="column" style="width:34%">
-					<label id="filterText">Rep</label>
-					<select black big ng-model="repFilter.value" ng-options="r for r in reps" ng-change="didFilter()"></select>
-				</div>
-				<div class="column" style="width:33%">
-					<label id="filterText">Status</label>
-					<select black big ng-model="endDateFilter.value" ng-options="s for s in statuses" ng-change="didFilter()"></select>
-				</div>
+				<md-input-container class="column" style="width:33%">
+					<label>Category</label>
+					<md-select ng-model="categoryFilter.value" ng-change="didFilter()">
+						<md-option ng-repeat="c in categories" value="{{c}}">{{c}}</md-option>
+					</md-select>
+				</md-input-container>
+				<md-input-container class="column" style="width:34%">
+					<label>Rep</label>
+					<md-select ng-model="repFilter.value" ng-change="didFilter()">
+						<md-option ng-repeat="r in reps" value="{{r}}">{{r}}</md-option>
+					</md-select>
+				</md-input-container>
+				<md-input-container class="column" style="width:33%">
+					<label>Status</label>
+					<md-select ng-model="endDateFilter.value" ng-change="didFilter()">
+						<md-option ng-repeat="s in statuses" value="{{s}}">{{s}}</md-option>
+					</md-select>
+				</md-input-container>
 			</div>
 			<br><br>
 
@@ -90,14 +99,14 @@
 							Category: {{record.category}}<br>
 							Subcategory: {{record.subcategory}}<br>
 							Rep: {{record.rep}}<br><br>
-							<button type="button" class="hoverable" id="accordionButton" ng-click="progressChartButton(record)">Progress Chart</button>
+							<md-button class="md-accent md-raised" id="accordionButton" ng-click="progressChartButton(record)">Progress Chart</md-button>
 							<br><br><br>
 						</div>
 						<div class="column" style="width:50%">
 							End Date: {{record.endDateDisplay}}<br>
 							Test Time: {{record.testTime}}<br>
 							Mistakes: {{record.mistakes}}<br><br>
-							<button type="button" class="hoverable" id="accordionButton" ng-click="editRecordButton(record)">Edit Record</button>
+							<md-button class="md-accent md-raised" id="accordionButton" ng-click="editRecordButton(record)">Edit Record</md-button>
 							<br><br><br>
 						</div>
 					</div>
