--- a/Front-end/StudentList.html
+++ b/Front-end/StudentList.html
@@ -87,6 +87,7 @@
 					<md-button class="md-accent md-raised" id="accordionButton" ng-click="editStudentButton(student)">Edit Student</md-button>
 					<md-button class="md-accent md-raised" id="accordionButton" ng-click="lineChartButton(student)" ng-show="studentIdsWithData.has(student.studentId)">Progress Chart</md-button>
 					<md-button class="md-accent md-raised" id="accordionButton" ng-click="preloadRecordsList(student)" ng-show="studentIdsWithData.has(student.studentId)">Record List</md-button>
+					<md-button class="md-accent md-raised" id="accordionButton" ng-click="removeStudent(student)">Remove Student</md-button>
 				</div>
 			</div>
 		</div>
