--- a/Front-end/StudentList.html
+++ b/Front-end/StudentList.html
@@ -87,6 +87,7 @@
 					<button type="button" class="hoverable" id="accordionButton" ng-click="lineChartButton(student)" ng-show="studentIdsWithData.has(student.studentId)">Progress Chart</button>
 					<button type="button" class="hoverable" id="accordionButton" ng-click="editStudentButton(student)">Edit Student</button>
 					<button type="button" class="hoverable" id="accordionButton" ng-click="preloadRecordsList(student)" ng-show="studentIdsWithData.has(student.studentId)">Record List</button>
+					<button type="button" class="hoverable" id="accordionButton" ng-click="removeStudent(student)">Delete Student</button>
 				</div>
 			</div>
 		</div>
