--- a/Front-end/RecordList.html
+++ b/Front-end/RecordList.html
@@ -27,8 +27,12 @@
 		<link rel="stylesheet" type="text/css" href="SiteStyle.css">
 		<link rel="stylesheet" type="text/css" href="ListStyle.css">
 	</head>
-	<body>
-		<div ng-app="gideonApp" ng-controller="recordListCtrl">
+	<body ng-app="gideonApp">
+		<div ng-controller="header">
+			<div ng-include="'Header.html'"></div>
+		</div>
+		
+		<div ng-controller="recordListCtrl">
 		<!--Selection buttons in the header to move to insert and update pages-->
 			<div id="header">
 				<button type="button" class="hoverable" id="listBtn"   onclick="location.href='StudentList.html'">Student List</button>
