Made these changes last session
I don't remember what they are but I hope they were good!

--- a/Front-end/Header.html
+++ b/Front-end/Header.html
@@ -1,6 +1,6 @@
 <div id = "siteHeader">
     <div ng-show="loggedIn">Logged in</div>
-    <div ng-show="!loggedIn">Viewing sample data as Guest - modifying the database has been disabled</div>
+    <div ng-show="!loggedIn">Viewing sample data as Guest - some functionality may be disabled</div>
 
     <div ng-show="loggedIn"  style="float: right; cursor: pointer;" ng-click="logout()">Logout</div>
     <div ng-show="!loggedIn" style="float: right; cursor: pointer;" ng-click="login()">Login</div>
