Login Security Setup
Got some UserService and UserDao stuff going so that secure crypto functions can be placed. Also created a table to store all the stuff, but not committing the script that contains its metadata because secrets ;)

--- a/Front-end/Header.html
+++ b/Front-end/Header.html
@@ -4,4 +4,7 @@
 
     <div ng-show="loggedIn"  style="float: right; cursor: pointer;" ng-click="logout()">Logout</div>
     <div ng-show="!loggedIn" style="float: right; cursor: pointer;" ng-click="login()">Login</div>
+
+    <div ng-show="loggedIn"  style="float: right; padding: 0px 10px;">|</div>
+    <div ng-show="loggedIn"  style="float: right; cursor: pointer;" ng-click="">Admin Settings</div>
 </div>
