Admin, Demo, and Home
Some new pages with CSS revamps and such

The login page uses a whitecard now which looks pretty nice :)

--- a/Front-end/RecordList.html
+++ b/Front-end/RecordList.html
@@ -108,7 +108,7 @@
 			</div>
 		</div>
 
-		<!--Footer exists to make selecting the last student on the list way less annoying-->
+		<!--Footer exists to make selecting the last record on the list way less annoying-->
 		<div id="footer">&nbsp;</div>
 	</body>
 </html>
