--- a/Front-end/Admin.html
+++ b/Front-end/Admin.html
@@ -43,7 +43,7 @@
                 <br>
                 <button big ng-click="shiftGrades(false)">Decrement Global Grades (to be run in the event of a mistake)</button>
                 <br>
-                <button big warn ng-click="terminate()">Terminate Account (currently does nothing)</button>
+                <button big warn ng-click="terminate()">Terminate Account</button>
 			</div>
 		</div>
 	</body>
