--- a/Front-end/Header.html
+++ b/Front-end/Header.html
@@ -1,5 +1,5 @@
 <div id = "siteHeader">
-    <div ng-show="loggedIn">Logged in</div>
+    <div ng-show="loggedIn">Logged in as {{currentUsername}}</div>
     <div ng-show="!loggedIn">Viewing sample data as Guest - some functionality may be disabled</div>
 
     <div ng-show="!loggedIn"  style="padding: 0px 10px;">|</div>
