--- a/Front-end/Header.html
+++ b/Front-end/Header.html
@@ -3,11 +3,11 @@
     <div ng-show="!loggedIn">Viewing sample data as Guest - some functionality may be disabled</div>
 
     <div ng-show="!loggedIn"  style="padding: 0px 10px;">|</div>
-    <div ng-show="!loggedIn"  style="cursor: pointer;" ng-click="goTo('demo.html')">More Details</div>
+    <div ng-show="!loggedIn"  style="cursor: pointer;" ng-click="goTo('Demo.html')">More Details</div>
 
     <div ng-show="loggedIn"  style="float: right; cursor: pointer;" ng-click="logout()">Logout</div>
     <div ng-show="!loggedIn" style="float: right; cursor: pointer;" ng-click="login()">Login</div>
 
     <div ng-show="loggedIn"  style="float: right; padding: 0px 10px;">|</div>
-    <div ng-show="loggedIn"  style="float: right; cursor: pointer;" ng-click="goTo('admin.html')">Admin Settings</div>
+    <div ng-show="loggedIn"  style="float: right; cursor: pointer;" ng-click="goTo('Admin.html')">Admin Settings</div>
 </div>
