--- a/Front-end/EditStudent.html
+++ b/Front-end/EditStudent.html
@@ -15,7 +15,7 @@
   		<script src="verify.js"></script>
   		<script src="gideonApp.js"></script>
   		<script src="editStudentCtrl.js"></script>
-		<script src="ripple.js"></script>
+		<!--script src="ripple.js"></script-->
 
 		<link rel="manifest" href="/site.webmanifest">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -35,8 +35,8 @@
 		</div>
 
 		<div class="exterior" ng-controller="editStudentCtrl">
-			<button invis class="hoverable" id="backButton" onclick="location.href='StudentList.html'">Back to Student List</button>
-			<button warn class="hoverable" id="deleteButton" ng-click="removeStudent()">Delete Student</button>
+			<md-button invis class="hoverable" id="backButton" onclick="location.href='StudentList.html'">Back to Student List</md-button>
+			<md-button ng-class="md-raised" warn class="hoverable" id="deleteButton" ng-click="removeStudent()">Delete Student</md-button>
 
 			<h1>Edit {{student.client}}</h1>
 			<!--Form used for editing a student in the database-->
@@ -44,75 +44,80 @@
 				<div class="columnContainer" id="editRow">
 					<!--Name input, required field-->
 					<div class="twoColumn">
-						<label for="student">Full Name</label><br>
-						<div class="inputWrapperBig">
-							<input white big type="text" name="client" ng-model="student.client" required>
-							<div class="invalidContainer" ng-class="{'invalid':form.client.$touched && form.client.$invalid}"></div>
-						</div>
-						<span class="errorText" ng-show="form.client.$touched && form.client.$invalid">Name is required.</span>
+						<md-input-container class="inputWrapperBig">
+							<label>Full Name</label>
+							<input md-select-on-focus type="text" name="client" ng-model="student.client" required>
+							<div ng-messages="form.client.$error">
+								<div ng-message="required">Name is required.</div>
+							</div>
+						</md-input-container>
 					</div>
 
 					<!--Email input, no required format-->
 					<div class="twoColumn">
-						<label for="email">Email</label><br>
-						<input white big type="text" ng-model="student.email">
+						<md-input-container class="inputWrapperBig">
+							<label>Email</label>
+							<input md-select-on-focus type="text" ng-model="student.email">
+						</md-input-container>
 					</div>
 				</div><br>
 
 				<div class="columnContainer" id="editRow">
 					<!--Grade selection-->
 					<div class="threeColumn">
-						<label for="email">Grade</label><br>
-						<select white big name="grade" id="gradeBox" ng-model="student.grade">
-								<option value="PreK (-1)">PreK</option>
-								<option value="Kinder (0)">Kinder</option>
-								<option value="1st">1st</option>
-								<option value="2nd">2nd</option>
-								<option value="3rd">3rd</option>
-								<option value="4th">4th</option>
-								<option value="5th">5th</option>
-								<option value="6th">6th</option>
-								<option value="7th">7th</option>
-								<option value="8th">8th</option>
-								<option value="9th">9th</option>
-								<option value="10th">10th</option>
-								<option value="11th">11th</option>
-								<option value="12th">12th</option>
-						</select>
+						<md-input-container class="inputWrapperBig">
+							<label>Grade</label>
+							<md-select id="gradeBox" name="grade" ng-model="student.grade" required>
+								<md-option ng-repeat="g in grades" value="{{g}}">{{g.split(' ')[0]}}</md-option>
+							</md-select>
+							<div ng-messages="form.grade.$error">
+								<div ng-message="required">Grade is required.</div>
+							</div>
+						</md-input-container>
 					</div>
 
 					<!--Phone input, no required format-->
 					<div class="threeColumn">
-						<label for="email">Phone</label><br>
-						<input white big type="text" ng-model="student.phone">
+						<md-input-container class="inputWrapperBig">
+							<label>Phone</label>
+							<input md-select-on-focus type="text" ng-model="student.phone">
+						</md-input-container>
 					</div>
 
 					<!--Gender selection-->
 					<div class="threeColumn">
-						<label for="email">Gender</label><br>
-						<select white big name="gender" id="genderBox" ng-model="student.gender">
-							<option value="Male">Male</option>
-							<option value="Female">Female</option>
-						</select>
+						<md-input-container class="inputWrapperBig">
+							<label>Gender</label>
+							<md-select id="genderBox" name="gender" ng-model="student.gender" required>
+								<md-option ng-repeat="g in genders" value="{{g}}">{{g}}</md-option>
+							</md-select>
+							<div ng-messages="form.gender.$error">
+								<div ng-message="required">Gender is required.</div>
+							</div>
+						</md-input-container>
 					</div>
 				</div><br>
 				
 				<div class="columnContainer" id="editRow">
 					<!--Address input, no required format-->
 					<div class="twoColumn">
-						<label for="email">Address</label><br>
-						<input white big type="text" ng-model="student.address">
+						<md-input-container class="inputWrapperBig">
+							<label>Phone</label>
+							<input md-select-on-focus type="text" ng-model="student.address">
+						</md-input-container>
 					</div>
 
 					<!--Current passes input-->
 					<div class="twoColumn">
-						<label for="email">Current Passes</label><br>
-						<input white big type="text" ng-model="student.currentPasses">
+						<md-input-container class="inputWrapperBig">
+							<label>Current Passes</label>
+							<input md-select-on-focus type="text" ng-model="student.currentPasses">
+						</md-input-container>
 					</div>
 				</div><br><br>
 
 				<!--Submit button to perform the update-->
-				<button big ng-click="updateStudent()">Submit</button>
+				<md-button big ng-class="md-accent md-raised" ng-click="updateStudent()">Submit</md-button>
 			</form>
 			<br><br>
 			<span ng-class="{'errorText':formStatus.id == 0, 'successText':formStatus.id == 1}">{{formStatus.text}}</span>
